--- a/south.html
+++ b/south.html
@@ -46,13 +46,18 @@
 
       <!---herosection-->
       <section>
-        <div>
-            <div>
-                <div>
-                    
+        <div id="carouseExampleCaptions" class="carousel slide">
+            <div class="carousel-inner">
+                <div class="carousel-item active hero-bg">
+                    <div class="carousel-caption top-0 mt-5">
+                      <div><p class="page">Web Design Southampton </p></div>
+                      <h2 class="display-2 mt-5 fw-bold">Websites That Drive Real Results</h2>
+                      <p>Imagine a website that works as hard as you do. Whether you need a professional WordPress website for your growing business or a powerful Shopify ecommerce solution, our Southampton-based team crafts bespoke websites that truly deliver.</p>
+                    </div>
                 </div>
             </div>
         </div>
       </section>
+      
 </body>
 </html>
