--- a/south.html
+++ b/south.html
@@ -8,6 +8,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="navbar navbar-expand-lg bg-success">
@@ -43,21 +44,21 @@
           </div>
         </div>
       </nav>
-
+    </header>
+    
       <!---herosection-->
       <section>
-        <div id="carouseExampleCaptions" class="carousel slide">
-            <div class="carousel-inner">
-                <div class="carousel-item active hero-bg">
-                    <div class="carousel-caption top-0 mt-5">
-                      <div><p class="page">Web Design Southampton </p></div>
-                      <h2 class="display-2 mt-5 fw-bold">Websites That Drive Real Results</h2>
-                      <p>Imagine a website that works as hard as you do. Whether you need a professional WordPress website for your growing business or a powerful Shopify ecommerce solution, our Southampton-based team crafts bespoke websites that truly deliver.</p>
-                    </div>
-                </div>
+        <div id="carouselExampleCaptions" class="carousel slide">
+          <div class="carousel-inner">
+            <div class="carousel-item active hero-bg">
+              <div class="carousel-caption top-0 mt-5">
+                <div><p class="page">Web Design Southamton</p></div>
+                <h2 class="display-2 mt-5 fw-bold">Websites That Drive Real Results</h2>
+                <p>Imagine a website that works as hard as you do. Whether you need a professional WordPress website for your growing business or a powerful Shopify ecommerce solution, our Southampton-based team crafts bespoke websites that truly deliver.</p>
+              </div>
             </div>
+          </div>
         </div>
-      </section>
-      
+      </section>    
 </body>
 </html>
